Fixed organizer name text alignment, increased image size

--- a/custom-style.css
+++ b/custom-style.css
@@ -1130,7 +1130,7 @@ li.comment li.comment { margin: 4rem 0 0 3rem; }
     flex: 1 0 calc( 25% - 3rem );
     margin: 0 0 3rem 3rem;
     max-width: calc( 25% - 3rem );
-    padding-top: 8rem;
+    padding-top: 10rem;
     position: relative;
     text-align: center;
 }
@@ -1138,15 +1138,16 @@ li.comment li.comment { margin: 4rem 0 0 3rem; }
 .wcorg-organizer img {
     border-radius: 99rem;
     position: absolute;
-        left: calc( 50% - 3rem );
+        left: calc( 50% - 4rem );
         top: 0;
-    width: 6rem;
+    width: 8rem;
 }
 
 .wcorg-organizer h2 {
     font-size: 2.4rem;
     line-height: 1.1;
     margin: 0 0 0 0;
+    text-align: center;
 }
 
 .wcorg-organizer-description p {
